welcome.lessons.welcome.array.array667.Array667.scala.error
array667:8: error: illegal start of statement
			else flag = 6;
                        ^